--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,32 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+
+# Database
 *.db
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Coverage
+coverage/
+.nyc_output/
