Support Dolt databases alongside SQLite
Make the Db interface async, extract the SQLite implementation into
db-sqlite.js, and add a Dolt implementation in db-dolt.js that connects
via mysql2/promise. The factory in db.js auto-detects the backend by
checking whether the resolved path is a directory with a .dolt
subdirectory. The watcher gains a Dolt polling mode that checks
HASHOF('HEAD') every 2 seconds for commit changes.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-# Path to .beads SQLite database (auto-discovered if not set)
+# Path to .beads database (auto-discovered if not set)
+# For SQLite: path to .db file (e.g. /path/to/.beads/issues.db)
+# For Dolt: path to dolt repo directory (e.g. /path/to/dolt-repo)
 BEADS_DB=
 
 # Server port
 PORT=3333
+
+# Dolt connection settings (used when BEADS_DB points to a Dolt repo)
+DOLT_HOST=127.0.0.1
+DOLT_PORT=3306
+DOLT_USER=root
+DOLT_PASSWORD=
+DOLT_DATABASE=beads
