--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "better-sqlite3": "^11.0.0",
     "chokidar": "^4.0.0",
     "hono": "^4.0.0",
+    "mysql2": "^3.17.1",
     "preact": "^10.25.0"
   },
   "devDependencies": {
