--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "start": "node src/server/index.js",
     "lint": "eslint src/",
     "format": "prettier --write 'src/**/*.{js,jsx,css}'",
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.9",
@@ -45,9 +48,11 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
+    "@vitest/coverage-v8": "^4.0.18",
     "concurrently": "^9.0.0",
     "eslint": "^9.0.0",
     "prettier": "^3.0.0",
-    "typescript": "^5.7.0"
+    "typescript": "^5.7.0",
+    "vitest": "^4.0.18"
   }
 }
