--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# Path to .beads database (auto-discovered if not set)
-# For SQLite: path to .db file (e.g. /path/to/.beads/issues.db)
-# For Dolt: path to dolt repo directory (e.g. /path/to/dolt-repo)
-BEADS_DB=
-
 # Server port
 PORT=3333
 
-# Dolt connection settings (used when BEADS_DB points to a Dolt repo)
-DOLT_HOST=127.0.0.1
-DOLT_PORT=3306
-DOLT_USER=root
-DOLT_PASSWORD=
-DOLT_DATABASE=beads
+# Dolt connection settings — setting any DOLT_* variable activates Dolt mode
+# DOLT_HOST=127.0.0.1
+# DOLT_PORT=3307
+# DOLT_USER=root
+# DOLT_PASSWORD=
+# DOLT_DATABASE=          # auto-discovered if the server has exactly one user database
+
+# SQLite mode — only used when no DOLT_* variables are set
+# BEADS_DB=               # auto-discovered from .beads/ up the directory tree
