--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@hono/node-server": "^1.19.9",
     "@preact/signals": "^2.0.0",
     "better-sqlite3": "^11.0.0",
