--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "better-sqlite3": "^11.0.0",
     "chokidar": "^4.0.0",
     "hono": "^4.0.0",
+    "marked": "^17.0.3",
     "mysql2": "^3.17.1",
     "preact": "^10.25.0"
   },
