--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/preact": "^3.2.4",
     "@vitest/coverage-v8": "^4.0.18",
     "concurrently": "^9.0.0",
     "eslint": "^9.0.0",
+    "jsdom": "^28.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.7.0",
     "vitest": "^4.0.18"
