--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@preact/signals": "^2.0.0",
     "better-sqlite3": "^11.0.0",
     "chokidar": "^4.0.0",
+    "dagre": "^0.8.5",
     "hono": "^4.0.0",
     "marked": "^17.0.3",
     "mysql2": "^3.17.1",
