--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,9 @@
 # Server port
 PORT=3333
 
-# Dolt connection settings — setting any DOLT_* variable activates Dolt mode
+# Dolt connection settings
 # DOLT_HOST=127.0.0.1
 # DOLT_PORT=3307
 # DOLT_USER=root
 # DOLT_PASSWORD=
 # DOLT_DATABASE=          # auto-discovered if the server has exactly one user database
-
-# SQLite mode — only used when no DOLT_* variables are set
-# BEADS_DB=               # auto-discovered from .beads/ up the directory tree
